# fastobo-syntax

./: .travis.yml  CHANGELOG.md  COPYING  Cargo.toml  README.md
.github/workflows/: test.yml
ci/travis/: deploy.sh  install.sh
src/: grammar.pest  iso8601.pest  lib.rs  obo14.pest  rfc3987.pest
tests/: comments.rs  date.rs  parser.rs
