[package]
name = "fastobo-syntax"
version = "0.5.0"
authors = ["Martin Larralde <martin.larralde@embl.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/fastobo/fastobo-syntax"
documentation = "https://docs.rs/fastobo/latest/fastobo/parser/"
homepage = "https://github.com/fastobo/fastobo-syntax"
description = "PEG Syntax and pest parser for the OBO flat file format 1.4"
edition = "2018"
keywords = ["obo", "ontology", "obofoundry", "syntax", "parser"]
categories = ["science", "parser-implementations"]

[badges.travis-ci]
repository = "fastobo/fastobo-syntax"
[badges.is-it-maintained-issue-resolution]
repository = "fastobo/fastobo-syntax"
[badges.maintenance]
status     = "actively-developed"

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
